# residualConnectivity

./: .gitignore  CMakeLists.txt  README.md  residualConnectivityConfig.cmake.in
PMC/: PMC.cpp  (+2 more)
PMC/PMCLib/: CMakeLists.txt  PMCLib.cpp  PMCLib.h
RPackage/: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  generateDataDir.R
RPackage/R/: CMakeLists.txt  PMC.R  articulationConditioning.R  articulationConditioningImportance.R  articulationConditioningResampling.R  articulationConditioningSameCount.R  articulationConditioningSameCountImportance.R  articulationConditioningSameCountImportance2.R  articulationConditioningSameCountResampling.R  articulationConditioningSplitting.R  articulationConditioningSplittingResult-class.R  averageComponentSize.R  coerce.R  conditionalMC.R  countConnectedSubgraphs.R  countConnectedSubgraphsBySize.R  createHexagonalLattice.R  crudeMC.R  estimateSpectraStochasticEnumeration.R  exactCounts-class.R  exactProbability.R  exactRCR.R  exactRCRUnequalProbabilities.R  exactSpectra-class.R  exhaustiveSearch.R  exhaustiveSubgraphs.R  gridCountSpecificSize.R  gridCountSpecificSize2.R  monteCarloResult-class.R  onLoad.R  optimalStateIndependentImportance.R  recursiveVarianceReduction.R  setDefaultPrec.R  simpleMC.R  spectraToRCR.R  stochasticEnumeration.R  transferMatrixCountConnectedSubgraphsOfGrid.R  transferMatrixUnequalProbabilities.R
RPackage/data/: .gitignore  dodecahedron.graphml
RPackage/src/: .gitignore  CMakeLists.txt  Makefile.win
RPackage/tests/: testthat.R
articulationConditioningResampling/: CMakeLists.txt  articulationConditioningResampling.cpp
articulationConditioningSplitting/: CMakeLists.txt  articulationConditioningSplitting.cpp
cancela2002RVR/: CMakeLists.txt  rvr.cpp
copyText/: CMakeLists.txt
crudeMC/: CMakeLists.txt  crudeMC.cpp
crudeMC/crudeMC/: .gitignore  CMakeLists.txt  crudeMC.cpp
crudeMC/crudeMCLib/: CMakeLists.txt  crudeMCLib.cpp  crudeMCLib.h
exactMethods/: CMakeLists.txt  countConnectedSubgraphsBySize.cpp  exactProbability.cpp  exhaustiveSearch.cpp  exhaustiveSearchUnequalProbabilities.cpp  gridCountSpecificSize.cpp  gridCountSpecificSize2.cpp  optimalStateIndependentImportance.cpp
exactMethods/exactMethods/: countConnectedSubgraphsBySize.h  exactProbability.h  exhaustiveSearch.h  exhaustiveSearchUnequalProbabilities.h  gridCountSpecificSize.h  gridCountSpecificSize2.h  optimalStateIndependentImportance.h
exhaustiveProbability/: CMakeLists.txt  main.cpp
exhaustiveSearch/: CMakeLists.txt  exhaustiveSearch.cpp
exhaustiveSearch/exhaustiveSearch/: CMakeLists.txt  exhaustiveSearch.cpp
exhaustiveSearch/exhaustiveSearchLib/: CMakeLists.txt  (+1 more)
expectedVertexCount/: CMakeLists.txt  main.cpp
getMinimumReliability/: CMakeLists.txt  main.cpp  main.cpp.in
gridCountSpecificSize/: CMakeLists.txt  main.cpp
gridCountSpecificSize2/: CMakeLists.txt  main.cpp
matlabPackage/: CMakeLists.txt  conditionalMC.m  countConnectedSubgraphsBySize.m  crudeMC.m  exhaustiveSearch.m  generateDataDir.R  recursiveVarianceReduction.m  runMatlab.in
monteCarloMethods/: CMakeLists.txt  PMC.cpp  articulationConditioning.cpp  articulationConditioningImportance.cpp  articulationConditioningResampling.cpp  articulationConditioningSameCount.cpp  articulationConditioningSameCountImportance.cpp  articulationConditioningSameCountImportance2.cpp  articulationConditioningSameCountResampling.cpp  articulationConditioningSplitting.cpp  averageComponentSize.cpp  componentSize.cpp  conditionalMC.cpp  crudeMC.cpp  recursiveVarianceReduction.cpp  stochasticEnumeration1.cpp  stochasticEnumeration2.cpp  usingBiconnectedSplitting.cpp
optimalStateIndependentImportance/: CMakeLists.txt  main.cpp
raoBlackwellisation/: CMakeLists.txt  raoBlackwellisation.cpp
residualConnectivityCommon/: CMakeLists.txt  Context.cpp  Context.h  DiscreteGermGrainObs.cpp  DiscreteGermGrainObs.h  DiscreteGermGrainSubObs.cpp  DiscreteGermGrainSubObs.h  aliasMethod.cpp  aliasMethod.h  arguments.cpp  arguments.h  argumentsMPFR.cpp  argumentsMPFR.h  argumentsMPIR.cpp  argumentsMPIR.h  binaryDataSet.cpp  binaryDataSet.h  bridges.hpp  calculateFactorials.cpp  calculateFactorials.h  conditionArticulation.cpp  conditionArticulation.h  connected_components_restricted.hpp  constructGraphs.cpp  constructGraphs.h  constructSubGraph.cpp  constructSubGraph.h  context.cpp  context.h  depth_first_search_restricted.hpp  empiricalDistribution.cpp  empiricalDistribution.h  filterByStateMask.h  findFixedOnVisitor.h  includeMPFRResidualConnectivity.h  includeNumerics.h  isSingleComponentWithRadius.cpp  isSingleComponentWithRadius.h  lexographicOrder.h  observation.cpp  (+18 more)
splittingBasic/: CMakeLists.txt  splittingBasic.cpp
subObservationVisualiser/: CMakeLists.txt  ZoomGraphicsView.cpp  ZoomGraphicsView.h  main.cpp  subObservationStatusBar.cpp  subObservationStatusBar.h  subObservationVisualiserBase.cpp  subObservationVisualiserBase.h  subObservationVisualiserCollection.cpp  subObservationVisualiserCollection.h  subObservationVisualiserSingle.cpp  subObservationVisualiserSingle.h  subObservationVisualiserTree.cpp  subObservationVisualiserTree.h  treeVisualiserFrame.cpp  treeVisualiserFrame.h
transferMatrix/: CMakeLists.txt  main.cpp
transferMatrixCommon/: CMakeLists.txt  constructMatrices.cpp  constructMatrices.h  constructStates.cpp  constructStates.h  countSubgraphs.cpp  countSubgraphs.h  countSubgraphsBySize.cpp  countSubgraphsBySize.h  countSubgraphsCommon.cpp  countSubgraphsCommon.h  customizedEigen.cpp  customizedEigen.h  isConnectedState.cpp  isConnectedState.h  sortStatesAndVertexCounts.cpp  sortStatesAndVertexCounts.h  states.cpp  states.h  subgraphMacros.hpp  unequalProbabilities.cpp
transferMatrixEstimation/: CMakeLists.txt  main.cpp
usingBiconnectedSplitting/: CMakeLists.txt  splitting.cpp  usingBiconnectedSplitting.cpp
usingMultipleLevelsResampling/: CMakeLists.txt  usingMultipleLevelsResampling.cpp
usingMultipleLevelsSplitting/: CMakeLists.txt  usingMultipleLevelsSplitting.cpp
visualiseSplitting/: CMakeLists.txt  main.cpp  splittingViewer.cpp  splittingViewer.h
(+256 files in other folders)
