project(residualConnectivity)
cmake_minimum_required(VERSION 3.1)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
set(Boost_USE_STATIC_LIBS	OFF)
set(Boost_USE_MULTITHREADED	ON)
set(Boost_USE_STATIC_RUNTIME	OFF)

option(BUILD_MATLAB_PACKAGE "Build Matlab package" ON)
option(BUILD_VISUALISATION "Build visualisation code" ON)

add_definitions("-DBOOST_NO_AUTO_PTR")
if(CMAKE_COMPILER_IS_GNUCC)
	add_definitions("-Wall -fPIC")
endif()

#Find boost packages
find_package(Boost 1.53.0 COMPONENTS graph program_options system serialization filesystem regex REQUIRED)
find_package(OpenMP REQUIRED)

if(NOT DEFINED EIGEN_INCLUDE_DIR)
	message(FATAL_ERROR "Please point the environment variable EIGEN_INCLUDE_DIR to the include directory of your Eigen3 installation.")
endif()
include_directories("${EIGEN_INCLUDE_DIR}")

if(BUILD_MATLAB_PACKAGE)
	find_package(Matlab COMPONENTS MEX_COMPILER MX_LIBRARY REQUIRED)
endif()
#Try config file first
find_package(igraph CONFIG QUIET)
if(NOT HAVE_IGRAPH)
	find_package(igraph REQUIRED)
endif()
if(BUILD_VISUALISATION)
	find_package(Qt5 COMPONENTS Widgets Core Gui REQUIRED)
endif()

if(("${CMAKE_BUILD_TYPE}" STREQUAL "Release") OR ("${CMAKE_BUILD_TYPE}" STREQUAL "RelWithDebInfo"))
	find_package(OpenMP)
endif()

find_package(Mathematica COMPONENTS MathLink)

if(WIN32)
	find_package(mpfr)
	find_package(mpir)
else()
	#mpfr needs to be listed as an imported target so that we can use target_link_librarie later on. If we don't have this then it just adds a -lmpfr which probably picks up the wrong thing. 
	find_library(mpfr_LIBRARY mpfr)
	find_path(mpfr_INCLUDE mpfr.h)
	add_library(mpfr SHARED IMPORTED)
	set_target_properties(mpfr PROPERTIES IMPORTED_LOCATION ${mpfr_LIBRARY})
	set_target_properties(mpfr PROPERTIES INTERFACE_INCLUDE_DIRECTORIES ${mpfr_INCLUDE})
endif()

add_subdirectory(residualConnectivityCommon)
add_subdirectory(exhaustiveProbability)
add_subdirectory(usingBiconnectedSplitting)
add_subdirectory(transferMatrix)
add_subdirectory(transferMatrixCommon)
add_subdirectory(transferMatrixEstimation)
add_subdirectory(monteCarloMethods)
add_subdirectory(exactMethods)
if(${Mathematica_MathLink_FOUND})
	add_subdirectory(getMinimumReliability)
endif()
add_subdirectory(splittingBasic)
if(BUILD_VISUALISATION)
	add_subdirectory(subObservationVisualiser)
endif()
if(BUILD_MATLAB_PACKAGE)
	add_subdirectory(matlabPackage)
endif()
add_subdirectory(articulationConditioningSplitting)
add_subdirectory(expectedVertexCount)

execute_process(COMMAND "${R_COMMAND}" -f generateDataDir.R --silent --no-save WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/RPackage OUTPUT_QUIET ERROR_QUIET)
add_subdirectory(RPackage)
find_package(R REQUIRED)
if(WIN32)
	install(CODE "execute_process(COMMAND \"${R_COMMAND}\" CMD INSTALL --no-multiarch RPackage/\$\{CMAKE_INSTALL_CONFIG_NAME\} WORKING_DIRECTORY ${CMAKE_BINARY_DIR})")
else()
	install(CODE "execute_process(COMMAND \"${R_COMMAND}\" CMD INSTALL RPackage/ WORKING_DIRECTORY ${CMAKE_BINARY_DIR})")
endif()
add_subdirectory(copyText)
add_subdirectory(copyBinary)
