find_package(Rcpp REQUIRED)
set(copyPackageDependencies)
add_custom_target(copyPackageAlways ALL)
if(WIN32)
	foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
		add_custom_command(TARGET copyPackageAlways POST_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy "${CMAKE_CURRENT_SOURCE_DIR}/NAMESPACE" "${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/NAMESPACE")

		add_custom_command(TARGET copyPackageAlways POST_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy "${CMAKE_CURRENT_SOURCE_DIR}/DESCRIPTION" "${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/DESCRIPTION")
		foreach(index RANGE 4 12)
			add_custom_command(OUTPUT "${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/data/grid${index}Counts.RData" COMMAND ${CMAKE_COMMAND} ARGS -E copy "${CMAKE_CURRENT_SOURCE_DIR}/data/grid${index}Counts.RData" "${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/data/grid${index}Counts.RData")
			list(APPEND copyPackageDependencies "${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/data/grid${index}Counts.RData")
		endforeach()
	endforeach()
else()
	add_custom_command(TARGET copyPackageAlways POST_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy "${CMAKE_CURRENT_SOURCE_DIR}/NAMESPACE" "${CMAKE_BINARY_DIR}/RPackage/NAMESPACE")
	add_custom_command(TARGET copyPackageAlways POST_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy "${CMAKE_CURRENT_SOURCE_DIR}/DESCRIPTION" "${CMAKE_BINARY_DIR}/RPackage/DESCRIPTION")
	foreach(index RANGE 4 12)
		add_custom_command(OUTPUT "${CMAKE_BINARY_DIR}/RPackage/data/grid${index}Counts.RData" COMMAND ${CMAKE_COMMAND} ARGS -E copy "${CMAKE_CURRENT_SOURCE_DIR}/data/grid${index}Counts.RData" "${CMAKE_BINARY_DIR}/RPackage/data/grid${index}Counts.RData")
		list(APPEND copyPackageDependencies "${CMAKE_BINARY_DIR}/RPackage/data/grid${index}Counts.RData")
	endforeach()
endif()
add_custom_target(copyPackage ALL DEPENDS ${copyPackageDependencies})

add_subdirectory(R)
add_subdirectory(src)
