find_package(Rcpp REQUIRED)
set(copyPackageDependencies)
if(WIN32)
	foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
		foreach(index RANGE 4 12)
			if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/data/grid${index}Counts.RData")
				add_custom_command(OUTPUT "${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/data/grid${index}Counts.RData" COMMAND ${CMAKE_COMMAND} ARGS -E copy "${CMAKE_CURRENT_SOURCE_DIR}/data/grid${index}Counts.RData" "${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/data/grid${index}Counts.RData")
				list(APPEND copyPackageDependencies "${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/data/grid${index}Counts.RData")
			endif()
		endforeach()
	endforeach()
else()
	foreach(index RANGE 4 12)
		if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/data/grid${index}Counts.RData")
			add_custom_command(OUTPUT "${CMAKE_BINARY_DIR}/RPackage/data/grid${index}Counts.RData" COMMAND ${CMAKE_COMMAND} ARGS -E copy "${CMAKE_CURRENT_SOURCE_DIR}/data/grid${index}Counts.RData" "${CMAKE_BINARY_DIR}/RPackage/data/grid${index}Counts.RData")
			list(APPEND copyPackageDependencies "${CMAKE_BINARY_DIR}/RPackage/data/grid${index}Counts.RData")
		endif()
	endforeach()
endif()
add_custom_target(copyPackage ALL DEPENDS ${copyPackageDependencies})

add_subdirectory(src)
