find_package(Rcpp REQUIRED)
set(copyPackageDependencies)
set(dataFiles grid4Counts.RData grid5Counts.RData grid6Counts.RData grid7Counts.RData grid8Counts.RData grid9Counts.RData grid10Counts.RData grid11Counts.RData grid12Counts.RData dodecahedronCounts.RData dodecahedron.graphml)
if(WIN32)
	foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
		foreach(DATAFILE IN LISTS dataFiles)
			if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/data/${DATAFILE}")
				add_custom_command(OUTPUT "${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/data/${DATAFILE}" COMMAND ${CMAKE_COMMAND} ARGS -E copy "${CMAKE_CURRENT_SOURCE_DIR}/data/${DATAFILE}" "${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/data/${DATAFILE}")
				list(APPEND copyPackageDependencies "${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/data/${DATAFILE}")
			endif()
		endforeach()
	endforeach()
else()
	foreach(DATAFILE IN LISTS dataFiles)
		if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/data/${DATAFILE}")
			add_custom_command(OUTPUT "${CMAKE_BINARY_DIR}/RPackage/data/${DATAFILE}" COMMAND ${CMAKE_COMMAND} ARGS -E copy "${CMAKE_CURRENT_SOURCE_DIR}/data/${DATAFILE}" "${CMAKE_BINARY_DIR}/RPackage/data/${DATAFILE}")
			list(APPEND copyPackageDependencies "${CMAKE_BINARY_DIR}/RPackage/data/${DATAFILE}")
		endif()
	endforeach()
endif()
add_custom_target(copyPackage ALL DEPENDS ${copyPackageDependencies})

add_subdirectory(src)
