cmake_minimum_required(VERSION 3.1)
add_executable(articulationConditioningResampling articulationConditioningResampling.cpp)
target_link_libraries(articulationConditioningResampling PUBLIC residualConnectivityCommon monteCarloMethods)
if(WIN32)
	set_target_properties(articulationConditioningResampling PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} PDB_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
endif()
