cmake_minimum_required(VERSION 3.1)
add_custom_target(copyText ALL)
if(BUILD_MATLAB_PACKAGE)
	set(MFILES crudeMC.m conditionalMC.m exhaustiveSearch.m private/getGraph.m)
	#Copy .m files
	if(WIN32)
		foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
			foreach(MFILE IN LISTS MFILES)
				add_custom_command(TARGET copyText COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_SOURCE_DIR}/matlabPackage/${MFILE}" "${CMAKE_BINARY_DIR}/matlabPackage/${BUILD_TYPE}/${MFILE}")
			endforeach()
		endforeach()
	else()
		foreach(MFILE IN LISTS MFILES)
			add_custom_command(TARGET copyText COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_SOURCE_DIR}/matlabPackage${MFILE}" "${CMAKE_BINARY_DIR}/matlabPackage/${MFILE}")
		endforeach()
	endif()
	#Output the runMatlab file
	if(NOT WIN32)
		configure_file(${CMAKE_SOURCE_DIR}/matlabPackage/runMatlab.in ${CMAKE_BINARY_DIR}/matlabPackage/runMatlab @ONLY)
	endif()
endif()

if(BUILD_R_PACKAGE)
	find_package(Rcpp REQUIRED)
	set(RPackageFiles NAMESPACE DESCRIPTION R/conditionalMC.R R/countConnectedSubgraphs.R R/crudeMC.R R/stochasticEnumeration.R R/exactCounts-class.R R/exactSpectra-class.R R/exactRCR.R R/onLoad.R R/simpleMC.R R/spectraToRCR.R tests/testthat.R tests/testthat/test-gridCounts.R tests/testthat/test-conditionalMC.R tests/testthat/test-crudeMC.R tests/testthat/test-countConnectedSubgraphs.R tests/testthat/test-stochasticEnumeration.R tests/testthat/test-exactRCR.R tests/testthat/test-spectraToRCR.R)
	#Find location of Rcpp_exceptions.R 
	get_property(RCPP_INCLUDE_DIRECTORIES TARGET Rcpp PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
	foreach(RCPP_INCLUDE_DIRECTORY IN LISTS RCPP_INCLUDE_DIRECTORIES)
		if(EXISTS ${RCPP_INCLUDE_DIRECTORY}/Rcpp_exceptions.R)
			set(RCPP_EXCEPTIONS ${RCPP_INCLUDE_DIRECTORY}/Rcpp_exceptions.R)
		endif()
	endforeach()

	#Copy R package files
	if(WIN32)
		foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
			foreach(PACKAGE_FILE IN LISTS RPackageFiles)
				add_custom_command(TARGET copyText POST_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy "${CMAKE_SOURCE_DIR}/RPackage/${PACKAGE_FILE}" "${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/${PACKAGE_FILE}")
			endforeach()
			add_custom_command(TARGET copyText POST_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy "${RCPP_EXCEPTIONS}" "${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/R/Rcpp_exceptions.R")
		endforeach()
	else()
		foreach(PACKAGE_FILE IN LISTS RPackageFiles)
			add_custom_command(TARGET copyText POST_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy "${CMAKE_SOURCE_DIR}/RPackage/${PACKAGE_FILE}" "${CMAKE_BINARY_DIR}/RPackage/${PACKAGE_FILE}")
		endforeach()
		add_custom_command(TARGET copyText POST_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy "${RCPP_EXCEPTIONS}" "${CMAKE_BINARY_DIR}/RPackage//R/Rcpp_exceptions.R")
	endif()
endif()