cmake_minimum_required(VERSION 3.1)
add_executable(crudeMC crudeMC.cpp)
target_link_libraries(crudeMC PUBLIC residualConnectivityCommon monteCarloMethods)
if(WIN32)
	set_target_properties(crudeMC PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} PDB_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
endif()
