cmake_minimum_required(VERSION 3.1)
add_executable(expectedVertexCount main.cpp)
target_link_libraries(expectedVertexCount PUBLIC residualConnectivityCommon)
target_compile_definitions(expectedVertexCount PUBLIC BOOST_ALL_NO_LIB BOOST_ALL_DYN_LINK)
if(WIN32)
	set_target_properties(expectedVertexCount PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR} PDB_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
endif()
