cmake_minimum_required(VERSION 3.1)
if(${Mathematica_MathLink_FOUND})
	configure_file(${CMAKE_CURRENT_LIST_DIR}/main.cpp.in ${CMAKE_CURRENT_LIST_DIR}/main.cpp @ONLY)
	add_executable(getMinimumReliability main.cpp)
	target_link_libraries(getMinimumReliability PUBLIC residualConnectivityCommon ${Mathematica_MathLink_LIBRARY})
	target_include_directories(getMinimumReliability PUBLIC ${Mathematica_MathLink_INCLUDE_DIR})
	target_compile_definitions(getMinimumReliability PUBLIC BOOST_ALL_NO_LIB BOOST_ALL_DYN_LINK)
	if(WIN32)
		set_target_properties(getMinimumReliability PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/ PDB_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/)
	endif()
endif()
